samples/_failures_safe/1761083260_a645c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f63c024.c: In function ‘main’:
./samples/SAFE/__tmp_7f63c024.c:160:5: error: expected expression at end of input
  160 |     add_edge(&g, 3,
      |     ^~~~~~~~
./samples/SAFE/__tmp_7f63c024.c:160:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_7f63c024.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_7f63c024.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge(&g, 3,
      |     ^~~~~~~~
